--- a/index.html
+++ b/index.html
@@ -9,7 +9,55 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-  
+  <!-- header section start -->
+  <header class="bg-success">
+    <section>
+      <nav class="navbar navbar-expand-lg navbar-light mb-5">
+        <div class="container">
+          <a class="navbar-brand text-white" href="#">HONDA</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">News</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+      <!-- navber end -->
+      <!-- images and text area start -->
+      <section>
+        <div class="container-lg">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 mt-5 mb-5">
+              <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
+              <h1 class="text-white">Honda CBR 300R</h1>
+              <p class="text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <div class="btn btn-danger py-2 px-4">Purchase</div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+              <img class="w-75" src="images/header-bike-11.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- images and text area start -->
+
+  </header>
+  <!-- header section end -->
 
 
 
