--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <header class="bg-success">
     <section>
       <nav class="navbar navbar-expand-lg navbar-light mb-5">
-        <div class="container">
+        <div class="container mt-3">
           <a class="navbar-brand text-white" href="#">HONDA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ">
               <li class="nav-item">
                 <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
               </li>
@@ -42,14 +42,14 @@
       <section>
         <div class="container-lg">
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 mt-5 mb-5">
+            <div class="col-lg-6 col-md-6 col-sm-12 p-5 ">
               <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
               <h1 class="text-white">Honda CBR 300R</h1>
-              <p class="text-white">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <p class="text-white ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
               <div class="btn btn-danger py-2 px-4">Purchase</div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
-              <img class="w-75" src="images/header-bike-11.png" alt="">
+              <img class="w-75" src="images/header-bike-11.png" alt="images">
             </div>
           </div>
         </div>
@@ -58,6 +58,31 @@
 
   </header>
   <!-- header section end -->
+  <!-- main section start -->
+  <main>
+    <section>
+      <div class="container mb-5">
+        <div class="text-center mb-5 mt-5">
+          <h1>Fetured Bikes 2021</h1>
+          <span class="text-danger">Best bike collection</span>
+        </div>
+        <div class="align-items-center">
+          <div class="row">
+            <div class="col-lg-4 col-md-12 p-5">
+              <img src="images/feature-bike.png" alt="images">
+            </div>
+            <div class="col-lg-4 col-md-12 p-5">
+              <img src="images/feature-bike.png" alt="images">
+            </div>
+            <div class="col-lg-4 col-md-12 p-5">
+              <img src="images/feature-bike.png" alt="images">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- main section end -->
 
 
 
