--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <section>
         <div class="container-lg">
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 p-5 ">
+            <div class="col-lg-6 col-md-6 col-sm-12 p-4 ">
               <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
               <h1 class="text-white">Honda CBR 300R</h1>
               <p class="text-white ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
               <div class="btn btn-danger py-2 px-4">Purchase</div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 mb-5">
+            <div class="col-lg-6 col-md-6 col-sm-12">
               <img class="w-75" src="images/header-bike-11.png" alt="images">
             </div>
           </div>
@@ -66,15 +66,15 @@
           <h1>Fetured Bikes 2021</h1>
           <span class="text-danger">Best bike collection</span>
         </div>
-        <div class="align-items-center">
+        <div class="">
           <div class="row">
-            <div class="col-lg-4 col-md-12 p-5">
+            <div class="col-lg-4 col-sm-12 col-md-6 p-4">
               <img src="images/feature-bike.png" alt="images">
             </div>
-            <div class="col-lg-4 col-md-12 p-5">
+            <div class="col-lg-4 col-sm-12 col-md-6 p-4">
               <img src="images/feature-bike.png" alt="images">
             </div>
-            <div class="col-lg-4 col-md-12 p-5">
+            <div class="col-lg-4 col-sm-12 col-md-6 p-4">
               <img src="images/feature-bike.png" alt="images">
             </div>
           </div>
