--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Honda Assignment</title>
   <!-- bootatarp css link -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- font awsome link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
   <!-- header section start -->
@@ -58,6 +61,7 @@
 
   </header>
   <!-- header section end -->
+
   <!-- main section start -->
   <main>
     <section>
@@ -81,6 +85,59 @@
         </div>
       </div>
     </section>
+    <!-- bike collection section end -->
+
+    <!-- Happy Clients says section start -->
+    <section class="container">
+      <div class="row">
+        <div class="col-lg-4 text-center">
+          <img src="images/user-1.png" alt="">
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="icon">
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <span>Regina Miles</span><br>
+            <span>Banker</span>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img src="images/user-1.png" alt="">
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="icon">
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <span>Regina Miles</span><br>
+            <span>Banker</span>
+        </div>
+        <div class="col-lg-4 text-center">
+          <img src="images/user-1.png" alt="">
+          <p>Slate helps you see how 
+            many more days you need 
+            to work to reach your financial 
+            goal for the month and year.</p>
+            <div class="icon">
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star" aria-hidden="true"></i>
+            </div>
+            <span>Regina Miles</span><br>
+            <span>Banker</span>
+        </div>
+      </div>
+    </section>
+    <!-- Happy Clients says section end -->
   </main>
   <!-- main section end -->
 
