--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
     <!-- Happy Clients says section start -->
     <section class="container">
-      <div class="row">
-        <div class="col-lg-4 text-center">
+      <div class="row d-flex align-items-center justify-content-center">
+        <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
           <img src="images/user-1.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
@@ -105,8 +105,8 @@
             <span>Regina Miles</span><br>
             <span>Banker</span>
         </div>
-        <div class="col-lg-4 text-center">
-          <img src="images/user-1.png" alt="">
+        <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
+          <img src="images/user-2.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
             to work to reach your financial 
@@ -120,8 +120,8 @@
             <span>Regina Miles</span><br>
             <span>Banker</span>
         </div>
-        <div class="col-lg-4 text-center">
-          <img src="images/user-1.png" alt="">
+        <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
+          <img class="rounded-circle w-75" src="images/user-3.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
             to work to reach your financial 
