--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 p-4 ">
               <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
-              <h1 class="text-white">Honda CBR 300R</h1>
+              <h1 class="text-white fw-bold">Honda CBR 300R</h1>
               <p class="text-white ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
               <div class="btn btn-danger py-2 px-4">Purchase</div>
             </div>
@@ -67,7 +67,7 @@
     <section>
       <div class="container mb-5">
         <div class="text-center mb-5 mt-5">
-          <h1>Fetured Bikes 2021</h1>
+          <h1 class="fw-bold">Fetured Bikes 2021</h1>
           <span class="text-danger">Best bike collection</span>
         </div>
         <div class="">
@@ -88,52 +88,55 @@
     <!-- bike collection section end -->
 
     <!-- Happy Clients says section start -->
-    <section class="container">
+    <section class="container mb-5 mt-5">
+      <div class="text-center mb-5 mt-5">
+        <h1 class="fw-bold">Happy <span class="text-danger fw-bold">Clients says</span></h1>
+      </div>
       <div class="row d-flex align-items-center justify-content-center">
         <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
-          <img src="images/user-1.png" alt="">
+          <img class="mb-3" src="images/user-1.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
             <div class="icon">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
             </div>
-            <span>Regina Miles</span><br>
-            <span>Banker</span>
+            <span class="text-info">Regina Miles</span><br>
+            <span class="text-dark">Banker</span>
         </div>
         <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
-          <img src="images/user-2.png" alt="">
+          <img class="mb-3" src="images/user-2.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
             <div class="icon">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
             </div>
-            <span>Regina Miles</span><br>
-            <span>Banker</span>
+            <span class="text-info">Regina Miles</span><br>
+            <span class="text-dark">Banker</span>
         </div>
         <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
-          <img class="rounded-circle w-75" src="images/user-3.png" alt="">
+          <img class="mb-3" src="images/Untitled-1.png" alt="">
           <p>Slate helps you see how 
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
             <div class="icon">
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star text-danger"></i>
             </div>
-            <span>Regina Miles</span><br>
-            <span>Banker</span>
+            <span class="text-info">Regina Miles</span><br>
+            <span class="text-dark">Banker</span>
         </div>
       </div>
     </section>
