--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Honda Assignment</title>
   <!-- bootatarp css link -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- font awsome link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -63,7 +63,7 @@
   <!-- header section end -->
 
   <!-- main section start -->
-  <main>
+  <main class="container-lg">
     <section>
       <div class="container mb-5">
         <div class="text-center mb-5 mt-5">
@@ -99,13 +99,14 @@
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
-            <div class="icon">
+            <div class="mb-2">
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star-o text-danger"></i>
             </div>
-            <span class="text-info">Regina Miles</span><br>
+            <span class="text-info mb-2">Regina Miles</span><br>
             <span class="text-dark">Banker</span>
         </div>
         <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
@@ -114,13 +115,14 @@
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
-            <div class="icon">
+            <div class="mb-2">
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star-o text-danger"></i>
             </div>
-            <span class="text-info">Regina Miles</span><br>
+            <span class="text-info mb-2">Regina Miles</span><br>
             <span class="text-dark">Banker</span>
         </div>
         <div class="col-lg-3 col-sm-12 text-center border p-4 m-3">
@@ -129,24 +131,78 @@
             many more days you need 
             to work to reach your financial 
             goal for the month and year.</p>
-            <div class="icon">
+            <div class="mb-2">
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
               <i class="fa fa-star text-danger"></i>
+              <i class="fa fa-star-o text-danger"></i>
             </div>
-            <span class="text-info">Regina Miles</span><br>
+            <span class="text-info mb-2">Regina Miles</span><br>
             <span class="text-dark">Banker</span>
         </div>
       </div>
     </section>
     <!-- Happy Clients says section end -->
+    <!-- Frequently Asked Questions section start -->
+    <section class="container mt-5">
+      <div class="text-center mb-5 mt-5">
+        <h1 class="fw-bold">Frequently Asked<span class="text-danger fw-bold"> Questions</span></h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 col-sm-11">
+          <img class="w-75" src="images/faq1.png" alt="">
+        </div>
+        <!-- accordion section start -->
+        <div class="col-lg-6 col-sm-11">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Frequently Asked Questions section end -->
   </main>
   <!-- main section end -->
 
 
 
   <!-- bootstrap js link -->
-  <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
