--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
               <p class="text-white">Computer-controlled digital transistorized with electronic advance</p>
               <h1 class="text-white fw-bold">Honda CBR 300R</h1>
               <p class="text-white ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-              <div class="btn btn-danger py-2 px-4">Purchase</div>
+              <!-- Button trigger modal -->
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Purchase
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Purchase</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
               <img class="w-75" src="images/header-bike-11.png" alt="images">
@@ -211,6 +233,18 @@
     <!-- Frequently Asked Questions section end -->
   </main>
   <!-- main section end -->
+  <!-- footer section start -->
+  <footer class="bg-success p-5 mt-5">
+    <div class="container ">
+      <h6 class="text-center text-white fs-0">© 2021 bike. All rights reserved</h6>
+      <div class="text-center">
+      <i class="fa fa-facebook m-2 text-white"></i>
+      <i class="fa fa-instagram m-2 text-white"></i>
+      <i class="fa fa-inbox m-2 text-white"></i>
+      <i class="fa fa-twitch m-2 text-white"></i>
+      </div>
+    </div>
+  </footer>
 
 
 
