--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Honda Assignment</title>
+  <!-- style css link -->
+  <link rel="stylesheet" href="style.css">
   <!-- bootatarp css link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- font awsome link -->
@@ -13,7 +15,7 @@
 </head>
 <body>
   <!-- header section start -->
-  <header class="bg-success">
+  <header class="background-color">
     <section>
       <nav class="navbar navbar-expand-lg navbar-light mb-5">
         <div class="container mt-3">
@@ -50,7 +52,7 @@
               <h1 class="text-white fw-bold">Honda CBR 300R</h1>
               <p class="text-white ">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
               <!-- Button trigger modal -->
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn bg-danger text-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Purchase
 </button>
 
@@ -234,7 +236,7 @@
   </main>
   <!-- main section end -->
   <!-- footer section start -->
-  <footer class="bg-success p-5 mt-5">
+  <footer class="background-color p-5 mt-5">
     <div class="container ">
       <h6 class="text-center text-white fs-0">© 2021 bike. All rights reserved</h6>
       <div class="text-center">
