--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         </div>
         <div class="">
           <div class="row">
-            <div class="col-lg-4 col-sm-12 col-md-6 p-4">
+            <div class="col-lg-4 col-sm-12 col-md-6 p-4 categories">
               <img src="images/feature-bike.png" alt="images">
             </div>
             <div class="col-lg-4 col-sm-12 col-md-6 p-4">
               <img src="images/feature-bike.png" alt="images">
             </div>
-            <div class="col-lg-4 col-sm-12 col-md-6 p-4">
+            <div class="col-lg-4 col-sm-12 col-md-6 p-4 categories">
               <img src="images/feature-bike.png" alt="images">
             </div>
           </div>
