--- a/index.html
+++ b/index.html
@@ -233,68 +233,63 @@
       </div>
     </section>
     <!-- Frequently Asked Questions section end -->
-    <!-- price discount section start -->
+    <!-- price section start -->
     <section class="container">
       <div class="text-center mb-5 mt-5">
-        <h1 class="fw-bold">Price<span class="text-danger fw-bold"> discount</span></h1>
+        <h1 class="fw-bold">Price<span class="text-danger fw-bold"> in BDT</span></h1>
       </div>
-      <div class="row">
-        <div class="col-lg-4">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-4 mt-3">
           <div class="card" style="width: 18rem;">
             <img src="images/bike-1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+              <h5 class="card-title">New Honda CBR150R motoGP</h5>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">Engine	: 150 cc (liq-cooled)</li>
+              <li class="list-group-item">Top Speed	: 160 Kmph (approx)</li>
+              <li class="list-group-item">Price in BDT	: 480,000 (dual ABS)</li>
             </ul>
             <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <div class="btn btn-danger">By now</div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-3">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/bike-4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title mt-1">New Honda CBR150R</h5>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">Engine	: 150 cc (liq-cooled)</li>
+              <li class="list-group-item">Top Speed	: 145 Kmph (approx)</li>
+              <li class="list-group-item">Price in BDT	: 538,000 (dual ABS)</li>
             </ul>
             <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <div class="btn btn-danger">By now</div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-3">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="images/honda-cbr-150r-bike-500x500.png" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Honda CB 150R</h5>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">An item</li>
-              <li class="list-group-item">A second item</li>
-              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">Engine	: 150cc (liq-cooled)</li>
+              <li class="list-group-item">Top Speed	: 150 Kmph (approx)</li>
+              <li class="list-group-item">Price in BDT	: 550,000 (ABS)</li>
             </ul>
             <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <div class="btn btn-danger">By now</div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- price discount section end -->
+    <!-- price section end -->
 
   </main>
   <!-- main section end -->
