--- a/index.html
+++ b/index.html
@@ -290,6 +290,45 @@
       </div>
     </section>
     <!-- price section end -->
+    <!-- Honda Bike Price List start -->
+    <section class="container">
+      <h3 class="fw-bold text-danger">Honda Bike Price List for BD 2021;</h3>
+      <div class="">
+        <table>
+          <tr>
+            <td>Model Name</td>
+            <td>Engine</td>
+            <td>Price in BD</td>
+          </tr>
+          <tr>
+            <td>Honda CBR150R</td>
+            <td>150 cc	</td>
+            <td>Tk.450,000</td>
+          </tr>
+          <tr>
+            <td>Honda X-Blade</td>
+            <td>160 cc	</td>
+            <td>Tk.172,000</td>
+          </tr>
+          <tr>
+            <td>Honda CB Hornet</td>
+            <td>160 cc	</td>
+            <td>Tk.189,900</td>
+          </tr>
+          <tr>
+            <td>Honda Livo</td>
+            <td>110 cc	</td>
+            <td>Tk.108,900</td>
+          </tr>
+          <tr>
+            <td>Honda Dream Neo	</td>
+            <td>110 cc	</td>
+            <td>Tk.89,900</td>
+          </tr>
+        </table>
+        </div>
+    </section>
+    <!-- Honda Bike Price List end -->
 
   </main>
   <!-- main section end -->
